Fixed BocTextValue and BocDateTimeValue alignment. (RM-3293)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@21804 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocDateTimeValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocDateTimeValue.css
@@ -16,6 +16,23 @@ span.bocDateValue
   white-space: nowrap;
   zoom: 1;
 }
+  
+span.bocDateTimeValue.readOnly,
+span.bocDateValue.readOnly
+{
+  height: inherit;
+}
+
+body.msie7 span.bocDateTimeValue.readOnly,
+body.msie7 span.bocDateValue.readOnly
+{
+  height: auto;
+}
+
+span.bocDateTimeValue.disabled,
+span.bocDateValue.disabled
+{
+}
 
 span.bocDateValue
 {
