--- a/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocTextValue.css
@@ -9,6 +9,20 @@ span.bocTextValue
   vertical-align: middle;
   overflow: hidden;
 }
+  
+.bocTextValue.readOnly
+{
+  min-height: inherit;
+}
+
+body.msie7 .bocTextValue.readOnly
+{
+  min-height: auto;
+}
+
+.bocTextValue.disabled
+{
+}
 
 span.bocTextValue .content
 {
@@ -38,12 +52,4 @@ span.bocTextValue textarea
   width: 100%;
   height: 100%;
   display: inline-block;
-}
-
-.bocTextValue.readOnly
-{
-}
-
-.bocTextValue.disabled
-{
 }
