--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocMultilineTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocMultilineTextValue.css
@@ -21,6 +21,20 @@ span.bocMultilineTextValue .content
   bottom: 0.5em;
   height: auto;
 }
+  
+.bocMultilineTextValue.readOnly
+{
+  min-height: inherit;
+}
+
+body.msie7 .bocMultilineTextValue.readOnly
+{
+  min-height: auto;
+}
+
+.bocMultilineTextValue.disabled
+{
+}
 
 .bocMultilineTextValue.readOnly .content
 {
@@ -32,12 +46,4 @@ span.bocMultilineTextValue textarea
   width: 100%;
   height: 100%;
   display: inline-block;
-}
-
-.bocMultilineTextValue.readOnly
-{
-}
-
-.bocMultilineTextValue.disabled
-{
 }
